--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,8 +20,8 @@ phases:
 artifacts:
   files:
     - 'target/ccdemo.war'
-#    - 'appspec.yml'
-#    - 'scripts/before_install.sh'
-#    - 'scripts/after_install.sh'    
-#    - 'scripts/start_server.sh'
-#    - 'scripts/stop_server.sh'    
+    - 'appspec.yml'
+    - 'scripts/before_install.sh'
+    - 'scripts/after_install.sh'    
+    - 'scripts/start_server.sh'
+    - 'scripts/stop_server.sh'    
